fix tests, using ratification type, mandatee submitter has different parents, skip flaky newsItem code except for kort-bestek profile

--- a/app/components/subcase/bekrachtiging-description-panel/view.hbs
+++ b/app/components/subcase/bekrachtiging-description-panel/view.hbs
@@ -1,5 +1,5 @@
 <div {{did-update (perform this.loadAgendaData)}}>
-  <Auk::Panel>
+  <Auk::Panel data-test-subcase-bekrachtiging-description-panel>
     <Auk::Panel::Header>
       <Auk::Toolbar>
         <Auk::Toolbar::Group @position="left">
