change cases.case.subcases to cases.case.index route

--- a/app/components/search/result-cards/case.hbs
+++ b/app/components/search/result-cards/case.hbs
@@ -20,7 +20,7 @@
       <AuLink
         data-test-route-search-result-cards-case-shorttitle
         class="au-u-padding-none card-link"
-        @route="cases.case.subcases"
+        @route="cases.case.index"
         @model={{@caseId}}
       >
         <span class="card-link">
