--- a/app/components/search/result-cards/publication-flow.hbs
+++ b/app/components/search/result-cards/publication-flow.hbs
@@ -17,7 +17,7 @@
       {{#if @decisionmakingFlowId}}
         <AuLink
           class="au-u-padding-none card-link"
-          @route="cases.case.subcases"
+          @route="cases.case.index"
           @model={{@decisionmakingFlowId}}
         >
           <span
