load latestretrievalactivty from model

--- a/app/components/cases/parliament/description-panel.hbs
+++ b/app/components/cases/parliament/description-panel.hbs
@@ -28,7 +28,7 @@
   </Auk::Panel::Header>
   <Auk::Panel::Body>
     <AuHeading @level="4" @skin="4">
-      {{@parliamentFlow.title}}
+      {{@latestRetrievalActivity.title}}
     </AuHeading>
   </Auk::Panel::Body>
   <Auk::Panel::Body>
