--- a/app/templates/cases/case/parliament-flow/index.hbs
+++ b/app/templates/cases/case/parliament-flow/index.hbs
@@ -10,6 +10,7 @@
         <div id="case-info" class="auk-u-mb-4">
           <Cases::Parliament::DescriptionPanel
             @parliamentFlow={{@model.parliamentFlow}}
+            @latestRetrievalActivity={{@model.latestRetrievalActivity}}
           />
         </div>
         <div id="documents" class="auk-u-mb-4">
