--- a/app/templates/styleguide/panel.hbs
+++ b/app/templates/styleguide/panel.hbs
@@ -172,11 +172,11 @@
       <div class="au-c-form">
         <AuFormRow>
           <Auk::Label>Label</Auk::Label>
-          <textarea class="auk-textarea" rows="2"></textarea>
+          <AuTextarea rows="2"></AuTextarea>
         </AuFormRow>
         <AuFormRow>
           <Auk::Label>Label</Auk::Label>
-          <textarea class="auk-textarea" rows="4"></textarea>
+          <AuTextarea rows="4"></AuTextarea>
         </AuFormRow>
       </div>
     </Auk::Panel::Body>
