--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-edit.hbs
@@ -14,32 +14,35 @@
       {{/if}}
       <AuFormRow>
         <Auk::Label id="name-subcase">{{t "name-subcase"}}</Auk::Label>
-        <Textarea
+        <AuTextarea
           data-test-agendaitem-titles-edit-shorttitle={{true}}
           rows="2"
           aria-labelledby="name-subcase"
-          class="auk-textarea"
-          @value={{@agendaitem.shortTitle}}
+          value={{@agendaitem.shortTitle}}
+          @width="block"
+          {{on "input" (pick "target.value" (set @agendaitem "shortTitle"))}}
         />
       </AuFormRow>
       <AuFormRow>
         <Auk::Label id="title-subcase">{{t "title-subcase"}}</Auk::Label>
-        <Textarea
+        <AuTextarea
           data-test-agendaitem-titles-edit-title={{true}}
           rows="4"
           aria-labelledby="title-subcase"
-          class="auk-textarea"
-          @value={{@agendaitem.title}}
+          value={{@agendaitem.title}}
+          @width="block"
+          {{on "input" (pick "target.value" (set @agendaitem "title"))}}
         />
       </AuFormRow>
       <AuFormRow>
         <Auk::Label id="comment-title">{{t "comment-title"}}</Auk::Label>
-        <Textarea
+        <AuTextarea
           data-test-agendaitem-titles-edit-comment={{true}}
           rows="2"
           aria-labelledby="comment-title"
-          class="auk-textarea"
-          @value={{@agendaitem.comment}}
+          value={{@agendaitem.comment}}
+          @width="block"
+          {{on "input" (pick "target.value" (set @agendaitem "comment"))}}
         />
       </AuFormRow>
       <AuFormRow>
@@ -47,12 +50,13 @@
           <Auk::Icon @name="lock-closed" @size="small" />
           {{t "private-comment-title"}}
         </Auk::Label>
-        <Textarea
+        <AuTextarea
           data-test-agendaitem-titles-edit-private-comment={{true}}
           rows="2"
           aria-labelledby="private-comment-title"
-          class="auk-textarea"
-          @value={{@agendaitem.privateComment}}
+          value={{@agendaitem.privateComment}}
+          @width="block"
+          {{on "input" (pick "target.value" (set @agendaitem "privateComment"))}}
         />
       </AuFormRow>
       {{#if (is-announcement @agendaitem.type)}}
