--- a/app/components/cases/subcases/new-subcase-form.hbs
+++ b/app/components/cases/subcases/new-subcase-form.hbs
@@ -96,23 +96,25 @@
                 <AuFormRow>
                   <Auk::Label id="name-subcase">
                     {{t "name-subcase"}}</Auk::Label>
-                  <Textarea
+                  <AuTextarea
                     data-test-new-subcase-form-shorttitle
-                    aria-labelledby="name-subcase"
                     rows="2"
-                    class="auk-textarea"
-                    @value={{mut this.shortTitle}}
+                    aria-labelledby="name-subcase"
+                    value={{this.shortTitle}}
+                    @width="block"
+                    {{on "input" (pick "target.value" (set this "shortTitle"))}}
                   />
                 </AuFormRow>
                 <AuFormRow>
                   <Auk::Label id="title-subcase">
                     {{t "title-subcase"}}</Auk::Label>
-                  <Textarea
+                  <AuTextarea
                     data-test-new-subcase-form-longtitle
-                    aria-labelledby="name-subcase"
                     rows="4"
-                    class="auk-textarea"
-                    @value={{mut this.title}}
+                    aria-labelledby="name-subcase"
+                    value={{this.title}}
+                    @width="block"
+                    {{on "input" (pick "target.value" (set this "title"))}}
                   />
                 </AuFormRow>
                 <AuFormRow>
