--- a/app/components/subcase/bekrachtiging-description-panel/edit.hbs
+++ b/app/components/subcase/bekrachtiging-description-panel/edit.hbs
@@ -43,21 +43,23 @@
       <AuFormRow>
         <Auk::Label id="short-title-subcase">
           {{t "name-subcase"}}</Auk::Label>
-        <Textarea
+        <AuTextarea
           aria-labelledby="short-title-subcase"
           rows="2"
-          class="auk-textarea"
-          @value={{@subcase.shortTitle}}
+          value={{@subcase.shortTitle}}
+          @width="block"
+          {{on "input" (pick "target.value" (set @subcase "shortTitle"))}}
         />
       </AuFormRow>
       <AuFormRow>
         <Auk::Label id="title-subcase">
           {{t "title-subcase"}}</Auk::Label>
-        <Textarea
+        <AuTextarea
           aria-labelledby="title-subcase"
           rows="4"
-          class="auk-textarea"
-          @value={{@subcase.title}}
+          value={{@subcase.title}}
+          @width="block"
+          {{on "input" (pick "target.value" (set @subcase "title"))}}
         />
       </AuFormRow>
       <AuFormRow>
